Cache HOL directory in travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: c
 sudo: false
 install: developers/cached-deps.sh
-script: developers/build-travis.sh
+script: developers/regression-test.sh
 env: PATH=$PATH:$HOME/HOL/bin LD_LIBRARY_PATH=$HOME/polyml/lib
+cache:
+  directories:
+    - $HOME/HOL
