Install polyml from xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ cache:
   directories:
     - $HOME/HOL
 before_install:
+  - echo "deb http://archive.ubuntu.com/ubuntu/ xenial main " | sudo tee -a /etc/apt/sources.list
   - sudo apt-get -qq update
-  - sudo apt-get install -y libpolyml-dev polyml
+  - sudo apt-get install -y -t xenial libpolyml-dev polyml
