--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ env: PATH=$PATH:$HOME/HOL/bin LD_LIBRARY_PATH=$HOME/polyml/lib
 cache:
   directories:
     - $HOME/HOL
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y -t xenial libpolyml-dev polyml
 addons:
   apt:
     sources:
-    - sourceline: 'deb http://archive.ubuntu.com/ubuntu/ xenial main'
+    - sourceline: 'deb http://archive.ubuntu.com/ubuntu/ xenial main universe'
+    packages:
+    - polyml
+    - libpolyml-dev 
+    
