--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,66 @@
 language: c
 sudo: false
 install: developers/cached-deps.sh
-script: developers/build-travis.sh
+script: 
+  - developers/regression-dir.sh semantics/ffi
+  - developers/regression-dir.sh semantics
+  - developers/regression-dir.sh semantics/proofs
+  - developers/regression-dir.sh basis/pure
+  - developers/regression-dir.sh translator
+  - developers/regression-dir.sh compiler/parsing
+  - developers/regression-dir.sh characteristic
+  - developers/regression-dir.sh basis
+  - developers/regression-dir.sh translator/monadic
+  - developers/regression-dir.sh compiler/inference
+  - developers/regression-dir.sh compiler/backend/reg_alloc
+  - developers/regression-dir.sh compiler/backend/gc
+  - developers/regression-dir.sh compiler/backend
+  - developers/regression-dir.sh compiler/encoders/asm
+  - developers/regression-dir.sh compiler/encoders/x64
+  - developers/regression-dir.sh compiler/encoders/arm6
+  - developers/regression-dir.sh compiler/encoders/arm8
+  - developers/regression-dir.sh compiler/encoders/mips
+  - developers/regression-dir.sh compiler/encoders/riscv
+  - developers/regression-dir.sh compiler/backend/x64
+  - developers/regression-dir.sh compiler/backend/arm6
+  - developers/regression-dir.sh compiler/backend/arm8
+  - developers/regression-dir.sh compiler/backend/mips
+  - developers/regression-dir.sh compiler/backend/riscv
+  - developers/regression-dir.sh compiler/parsing/proofs
+  - developers/regression-dir.sh compiler/inference/proofs
+  - developers/regression-dir.sh compiler/backend/semantics
+  - developers/regression-dir.sh compiler/backend/reg_alloc/proofs
+  - developers/regression-dir.sh compiler/backend/proofs
+  - developers/regression-dir.sh compiler/encoders/x64/proofs
+  - developers/regression-dir.sh compiler/encoders/arm6/proofs
+  - developers/regression-dir.sh compiler/encoders/arm8/proofs
+  - developers/regression-dir.sh compiler/encoders/mips/proofs
+  - developers/regression-dir.sh compiler/encoders/riscv/proofs
+  - developers/regression-dir.sh compiler/backend/x64/proofs
+  - developers/regression-dir.sh compiler/backend/arm6/proofs
+  - developers/regression-dir.sh compiler/backend/arm8/proofs
+  - developers/regression-dir.sh compiler/backend/mips/proofs
+  - developers/regression-dir.sh compiler/backend/riscv/proofs
+  - developers/regression-dir.sh compiler/proofs
+  - developers/regression-dir.sh candle/set-theory
+  - developers/regression-dir.sh candle/syntax-lib
+  - developers/regression-dir.sh candle/standard/syntax
+  - developers/regression-dir.sh candle/standard/semantics
+  - developers/regression-dir.sh candle/standard/monadic
+  - developers/regression-dir.sh candle/standard/ml_kernel
+  - developers/regression-dir.sh candle/standard/opentheory
+  - developers/regression-dir.sh compiler/benchmarks
+  - developers/regression-dir.sh examples
+  - developers/regression-dir.sh examples/compilation
+  - developers/regression-dir.sh examples/compilation/proofs
+  - developers/regression-dir.sh translator/okasaki-examples
+  - developers/regression-dir.sh translator/other-examples
+  - developers/regression-dir.sh compiler/parsing/tests
+  - developers/regression-dir.sh compiler/bootstrap/translation
+  - developers/regression-dir.sh compiler/bootstrap/translation/x64
+  - developers/regression-dir.sh compiler/bootstrap/compilation/x64
+  - developers/regression-dir.sh compiler/bootstrap/compilation/x64/proofs
+  - developers/regression-dir.sh compiler/bootstrap/translation/riscv
+  - developers/regression-dir.sh compiler/bootstrap/compilation/riscv
+
 env: PATH=$PATH:$HOME/HOL/bin LD_LIBRARY_PATH=$HOME/polyml/lib
