--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,15 @@ install: developers/cached-deps.sh
 cache:
   directories:
     - script: $HOME/HOL
-
+    
+addons:
+  apt:
+    sources:
+    - script: sourceline: 'deb http://archive.ubuntu.com/ubuntu/ xenial main universe'
+    packages:
+    - script: polyml
+    - script: libpolyml-dev
+    - script: g++
     
 jobs:
   env: PATH=$PATH:$HOME/HOL/bin LD_LIBRARY_PATH=$HOME/polyml/lib
