--- a/.travis.yml
+++ b/.travis.yml
@@ -21,64 +21,85 @@ jobs:
   - stage: init
     script: chmod +x developers/regression-dir.sh developers/regression-init.sh
   - script: developers/regression-init.sh
-  - script: travis_wait 60 developers/regression-dir.sh semantics/ffi
-  - script: travis_wait 60 developers/regression-dir.sh semantics
-  - script: travis_wait 60 developers/regression-dir.sh semantics/proofs
-  - script: travis_wait 60 developers/regression-dir.sh basis/pure
-  - script: travis_wait 60 developers/regression-dir.sh translator
-  - script: travis_wait 60 developers/regression-dir.sh compiler/parsing
-  - script: travis_wait 60 developers/regression-dir.sh characteristic
-  - script: travis_wait 60 developers/regression-dir.sh basis
-  - script: travis_wait 60 developers/regression-dir.sh translator/monadic
-  - script: travis_wait 60 developers/regression-dir.sh compiler/inference
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/reg_alloc
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/gc
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/asm
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/x64
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/arm6
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/arm8
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/mips
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/riscv
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/x64
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/arm6
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/arm8
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/mips
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/riscv
-  - script: travis_wait 60 developers/regression-dir.sh compiler/parsing/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/inference/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/semantics
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/reg_alloc/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/x64/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/arm6/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/arm8/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/mips/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/encoders/riscv/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/x64/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/arm6/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/arm8/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/mips/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/backend/riscv/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/proofs
-  - script: travis_wait 60 developers/regression-dir.sh candle/set-theory
-  - script: travis_wait 60 developers/regression-dir.sh candle/syntax-lib
-  - script: travis_wait 60 developers/regression-dir.sh candle/standard/syntax
-  - script: travis_wait 60 developers/regression-dir.sh candle/standard/semantics
-  - script: travis_wait 60 developers/regression-dir.sh candle/standard/monadic
-  - script: travis_wait 60 developers/regression-dir.sh candle/standard/ml_kernel
-  - script: travis_wait 60 developers/regression-dir.sh candle/standard/opentheory
-  - script: travis_wait 60 developers/regression-dir.sh compiler/benchmarks
-  - script: travis_wait 60 developers/regression-dir.sh examples
-  - script: travis_wait 60 developers/regression-dir.sh examples/compilation
-  - script: travis_wait 60 developers/regression-dir.sh examples/compilation/proofs
-  - script: travis_wait 60 developers/regression-dir.sh translator/okasaki-examples
-  - script: travis_wait 60 developers/regression-dir.sh translator/other-examples
-  - script: travis_wait 60 developers/regression-dir.sh compiler/parsing/tests
-  - script: travis_wait 60 developers/regression-dir.sh compiler/bootstrap/translation
-  - script: travis_wait 60 developers/regression-dir.sh compiler/bootstrap/translation/x64
-  - script: travis_wait 60 developers/regression-dir.sh compiler/bootstrap/compilation/x64
-  - script: travis_wait 60 developers/regression-dir.sh compiler/bootstrap/compilation/x64/proofs
-  - script: travis_wait 60 developers/regression-dir.sh compiler/bootstrap/translation/riscv
-  - script: travis_wait 60 developers/regression-dir.sh compiler/bootstrap/compilation/riscv
-
+  - stage: semantics-ffi
+    script: travis_wait 60 developers/regression-dir.sh semantics/ffi
+  - stage: semantics
+    script: travis_wait 60 developers/regression-dir.sh semantics
+  - stage: semantics-proofs
+    script: travis_wait 60 developers/regression-dir.sh semantics/proofs
+  - stage: explorer-pp-astPP
+    script: travis_wait 60 developers/regression-dir.sh explorer/pp/astPP
+  - stage: translator
+    script: travis_wait 60 developers/regression-dir.sh translator
+  - stage: compiler-parsing
+    script: travis_wait 60 developers/regression-dir.sh compiler/parsing
+  - stage: characteristic
+    script: travis_wait 60 developers/regression-dir.sh characteristic
+  - stage: basis
+    script: travis_wait 60 developers/regression-dir.sh basis
+  - stage: compiler-inference
+    script: travis_wait 60 developers/regression-dir.sh compiler/inference
+  - stage: compiler-backend-reg-alloc
+    script: travis_wait 60 developers/regression-dir.sh compiler/backend/reg_alloc
+  - stage: compiler-backend-gc
+    script: travis_wait 60 developers/regression-dir.sh compiler/backend/gc
+  - stage: compiler-backend
+    script: travis_wait 60 developers/regression-dir.sh compiler/backend
+  - stage: compiler-targets-asm
+    script: travis_wait 60 developers/regression-dir.sh compiler/targets/asm
+  - stage: compiler-targets
+    script: travis_wait 60 developers/regression-dir.sh compiler/targets
+  - stage: compiler-eval-targets
+    script: travis_wait 60 developers/regression-dir.sh compiler/eval/targets
+  - stage: compiler-parsing-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/parsing/proofs
+  - stage: compiler-inference-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/inference/proofs
+  - stage: compiler-backend-semantics
+    script: travis_wait 60 developers/regression-dir.sh compiler/backend/semantics
+  - stage: compiler-backend-reg-alloc-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/backend/reg_alloc/proofs
+  - stage: compiler-backend-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/backend/proofs
+  - stage: compiler-targets-x64-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/targets/x64/proofs
+  - stage: compiler-targets-arm6-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/targets/arm6/proofs
+  - stage: compiler-targets-arm8-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/targets/arm8/proofs
+  - stage: compiler-targets-mips-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/targets/mips/proofs
+  - stage: compiler-targets-riscv-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/targets/riscv/proofs
+  - stage: compiler-eval-targets-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/eval/targets/proofs
+  - stage: compiler-proofs
+    script: travis_wait 60 developers/regression-dir.sh compiler/proofs
+  - stage: candle-set-theory
+    script: travis_wait 60 developers/regression-dir.sh candle/set-theory
+  - stage: candle-syntax-lib
+    script: travis_wait 60 developers/regression-dir.sh candle/syntax-lib
+  - stage: candle-standard-syntax
+    script: travis_wait 60 developers/regression-dir.sh candle/standard/syntax
+  - stage: candle-standard-semantics
+    script: travis_wait 60 developers/regression-dir.sh candle/standard/semantics
+  - stage: candle-standard-monadic
+    script: travis_wait 60 developers/regression-dir.sh candle/standard/monadic
+  - stage: candle-standard-ml-kernel
+    script: travis_wait 60 developers/regression-dir.sh candle/standard/ml_kernel
+  - stage: candle-standard-opentheory
+    script: travis_wait 60 developers/regression-dir.sh candle/standard/opentheory
+  - stage: explorer-pp
+    script: travis_wait 60 developers/regression-dir.sh explorer/pp
+  - stage: explorer
+    script: travis_wait 60 developers/regression-dir.sh explorer
+  - stage: compiler-parsing-testing
+    script: travis_wait 60 developers/regression-dir.sh compiler/parsing/testing
+  - stage: translator-okasaki-examples
+    script: travis_wait 60 developers/regression-dir.sh translator/okasaki-examples
+  - stage: translator-other-examples
+    script: travis_wait 60 developers/regression-dir.sh translator/other-examples
+  - stage: compiler-bootstrap-translation
+    script: travis_wait 60 developers/regression-dir.sh compiler/bootstrap/translation
+  - stage: compiler-bootstrap-evaluation
+    script: travis_wait 60 developers/regression-dir.sh compiler/bootstrap/evaluation
