--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ jobs:
   include:
   - stage: init
     script: chmod +x developers/regression-dir.sh developers/regression-init.sh
-  - script: developers/regression-init.sh
+  - stage: regression-init
+    script: developers/regression-init.sh
   - stage: semantics-ffi
     script: travis_wait 60 developers/regression-dir.sh semantics/ffi
   - stage: semantics
