--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ addons:
     sources:
     - sourceline: 'deb http://archive.ubuntu.com/ubuntu/ xenial main universe'
     packages:
-    - script: polyml
-    - script: libpolyml-dev
-    - script: g++
+    - polyml
+    - libpolyml-dev
+    - g++
     
 jobs:
   env: PATH=$PATH:$HOME/HOL/bin LD_LIBRARY_PATH=$HOME/polyml/lib
